trabmainC.output
Terminals unused in grammar

   NAME
   ESPACO
   FIMENTAO
   NUMBER
   PLUS
   MULT
   END


Grammar

    0 $accept: program $end

    1 program: PROGRAM lines

    2 lines: line
    3      | line lines

    4 line: statement ROWEND

    5 statement: ENTRADA varlist
    6          | SAIDA varlist
    7          | cmds
    8          | FIM

    9 varlist: id varlist
   10        | id

   11 cmds: cmd cmds
   12     | cmd

   13 $@1: %empty

   14 cmd: FACA id VEZES $@1 ROWEND cmds FIMFACA

   15 $@2: %empty

   16 cmd: ENQUANTO id FACA $@2 ROWEND cmds FIMENQUANTO

   17 $@3: %empty

   18 cmd: SE id ENTAO $@3 ROWEND cmds FIMSE ROWEND check
   19    | id ASSIGN id ROWEND
   20    | INC AP id FP ROWEND
   21    | ZERA AP id FP ROWEND

   22 $@4: %empty

   23 check: SENAO $@4 ROWEND cmds FIMSENAO

   24 $@5: %empty

   25 check: $@5 line


Terminals, with rules where they appear

$end (0) 0
error (256)
ENTRADA (258) 5
SAIDA (259) 6
FIM (260) 8
FACA (261) 14 16
VEZES (262) 14
ENQUANTO (263) 16
SE (264) 18
ENTAO (265) 18
SENAO (266) 23
INC (267) 20
ZERA (268) 21
NAME (269)
ESPACO (270)
FIMFACA (271) 14
FIMENTAO (272)
FIMSENAO (273) 23
FIMENQUANTO (274) 16
FIMSE (275) 18
ROWEND (276) 4 14 16 18 19 20 21 23
NUMBER (277)
ASSIGN (278) 19
PLUS (279)
AP (280) 20 21
FP (281) 20 21
MULT (282)
END (283)
PROGRAM (284) 1
id (285) 9 10 14 16 18 19 20 21


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
lines (33)
    on left: 2 3, on right: 1 3
line (34)
    on left: 4, on right: 2 3 25
statement (35)
    on left: 5 6 7 8, on right: 4
varlist (36)
    on left: 9 10, on right: 5 6 9
cmds (37)
    on left: 11 12, on right: 7 11 14 16 18 23
cmd (38)
    on left: 14 16 18 19 20 21, on right: 11 12
$@1 (39)
    on left: 13, on right: 14
$@2 (40)
    on left: 15, on right: 16
$@3 (41)
    on left: 17, on right: 18
check (42)
    on left: 23 25, on right: 18
$@4 (43)
    on left: 22, on right: 23
$@5 (44)
    on left: 24, on right: 25


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . lines

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    lines      go to state 12
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 2

    0 $accept: program . $end

    $end  shift, and go to state 17


State 3

    5 statement: ENTRADA . varlist

    id  shift, and go to state 18

    varlist  go to state 19


State 4

    6 statement: SAIDA . varlist

    id  shift, and go to state 18

    varlist  go to state 20


State 5

    8 statement: FIM .

    $default  reduce using rule 8 (statement)


State 6

   14 cmd: FACA . id VEZES $@1 ROWEND cmds FIMFACA

    id  shift, and go to state 21


State 7

   16 cmd: ENQUANTO . id FACA $@2 ROWEND cmds FIMENQUANTO

    id  shift, and go to state 22


State 8

   18 cmd: SE . id ENTAO $@3 ROWEND cmds FIMSE ROWEND check

    id  shift, and go to state 23


State 9

   20 cmd: INC . AP id FP ROWEND

    AP  shift, and go to state 24


State 10

   21 cmd: ZERA . AP id FP ROWEND

    AP  shift, and go to state 25


State 11

   19 cmd: id . ASSIGN id ROWEND

    ASSIGN  shift, and go to state 26


State 12

    1 program: PROGRAM lines .

    $default  reduce using rule 1 (program)


State 13

    2 lines: line .
    3      | line . lines

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    $default  reduce using rule 2 (lines)

    lines      go to state 27
    line       go to state 13
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 14

    4 line: statement . ROWEND

    ROWEND  shift, and go to state 28


State 15

    7 statement: cmds .

    $default  reduce using rule 7 (statement)


State 16

   11 cmds: cmd . cmds
   12     | cmd .

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    $default  reduce using rule 12 (cmds)

    cmds  go to state 29
    cmd   go to state 16


State 17

    0 $accept: program $end .

    $default  accept


State 18

    9 varlist: id . varlist
   10        | id .

    id  shift, and go to state 18

    $default  reduce using rule 10 (varlist)

    varlist  go to state 30


State 19

    5 statement: ENTRADA varlist .

    $default  reduce using rule 5 (statement)


State 20

    6 statement: SAIDA varlist .

    $default  reduce using rule 6 (statement)


State 21

   14 cmd: FACA id . VEZES $@1 ROWEND cmds FIMFACA

    VEZES  shift, and go to state 31


State 22

   16 cmd: ENQUANTO id . FACA $@2 ROWEND cmds FIMENQUANTO

    FACA  shift, and go to state 32


State 23

   18 cmd: SE id . ENTAO $@3 ROWEND cmds FIMSE ROWEND check

    ENTAO  shift, and go to state 33


State 24

   20 cmd: INC AP . id FP ROWEND

    id  shift, and go to state 34


State 25

   21 cmd: ZERA AP . id FP ROWEND

    id  shift, and go to state 35


State 26

   19 cmd: id ASSIGN . id ROWEND

    id  shift, and go to state 36


State 27

    3 lines: line lines .

    $default  reduce using rule 3 (lines)


State 28

    4 line: statement ROWEND .

    $default  reduce using rule 4 (line)


State 29

   11 cmds: cmd cmds .

    $default  reduce using rule 11 (cmds)


State 30

    9 varlist: id varlist .

    $default  reduce using rule 9 (varlist)


State 31

   14 cmd: FACA id VEZES . $@1 ROWEND cmds FIMFACA

    $default  reduce using rule 13 ($@1)

    $@1  go to state 37


State 32

   16 cmd: ENQUANTO id FACA . $@2 ROWEND cmds FIMENQUANTO

    $default  reduce using rule 15 ($@2)

    $@2  go to state 38


State 33

   18 cmd: SE id ENTAO . $@3 ROWEND cmds FIMSE ROWEND check

    $default  reduce using rule 17 ($@3)

    $@3  go to state 39


State 34

   20 cmd: INC AP id . FP ROWEND

    FP  shift, and go to state 40


State 35

   21 cmd: ZERA AP id . FP ROWEND

    FP  shift, and go to state 41


State 36

   19 cmd: id ASSIGN id . ROWEND

    ROWEND  shift, and go to state 42


State 37

   14 cmd: FACA id VEZES $@1 . ROWEND cmds FIMFACA

    ROWEND  shift, and go to state 43


State 38

   16 cmd: ENQUANTO id FACA $@2 . ROWEND cmds FIMENQUANTO

    ROWEND  shift, and go to state 44


State 39

   18 cmd: SE id ENTAO $@3 . ROWEND cmds FIMSE ROWEND check

    ROWEND  shift, and go to state 45


State 40

   20 cmd: INC AP id FP . ROWEND

    ROWEND  shift, and go to state 46


State 41

   21 cmd: ZERA AP id FP . ROWEND

    ROWEND  shift, and go to state 47


State 42

   19 cmd: id ASSIGN id ROWEND .

    $default  reduce using rule 19 (cmd)


State 43

   14 cmd: FACA id VEZES $@1 ROWEND . cmds FIMFACA

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 48
    cmd   go to state 16


State 44

   16 cmd: ENQUANTO id FACA $@2 ROWEND . cmds FIMENQUANTO

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 49
    cmd   go to state 16


State 45

   18 cmd: SE id ENTAO $@3 ROWEND . cmds FIMSE ROWEND check

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 50
    cmd   go to state 16


State 46

   20 cmd: INC AP id FP ROWEND .

    $default  reduce using rule 20 (cmd)


State 47

   21 cmd: ZERA AP id FP ROWEND .

    $default  reduce using rule 21 (cmd)


State 48

   14 cmd: FACA id VEZES $@1 ROWEND cmds . FIMFACA

    FIMFACA  shift, and go to state 51


State 49

   16 cmd: ENQUANTO id FACA $@2 ROWEND cmds . FIMENQUANTO

    FIMENQUANTO  shift, and go to state 52


State 50

   18 cmd: SE id ENTAO $@3 ROWEND cmds . FIMSE ROWEND check

    FIMSE  shift, and go to state 53


State 51

   14 cmd: FACA id VEZES $@1 ROWEND cmds FIMFACA .

    $default  reduce using rule 14 (cmd)


State 52

   16 cmd: ENQUANTO id FACA $@2 ROWEND cmds FIMENQUANTO .

    $default  reduce using rule 16 (cmd)


State 53

   18 cmd: SE id ENTAO $@3 ROWEND cmds FIMSE . ROWEND check

    ROWEND  shift, and go to state 54


State 54

   18 cmd: SE id ENTAO $@3 ROWEND cmds FIMSE ROWEND . check

    SENAO  shift, and go to state 55

    $default  reduce using rule 24 ($@5)

    check  go to state 56
    $@5    go to state 57


State 55

   23 check: SENAO . $@4 ROWEND cmds FIMSENAO

    $default  reduce using rule 22 ($@4)

    $@4  go to state 58


State 56

   18 cmd: SE id ENTAO $@3 ROWEND cmds FIMSE ROWEND check .

    $default  reduce using rule 18 (cmd)


State 57

   25 check: $@5 . line

    ENTRADA   shift, and go to state 3
    SAIDA     shift, and go to state 4
    FIM       shift, and go to state 5
    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    line       go to state 59
    statement  go to state 14
    cmds       go to state 15
    cmd        go to state 16


State 58

   23 check: SENAO $@4 . ROWEND cmds FIMSENAO

    ROWEND  shift, and go to state 60


State 59

   25 check: $@5 line .

    $default  reduce using rule 25 (check)


State 60

   23 check: SENAO $@4 ROWEND . cmds FIMSENAO

    FACA      shift, and go to state 6
    ENQUANTO  shift, and go to state 7
    SE        shift, and go to state 8
    INC       shift, and go to state 9
    ZERA      shift, and go to state 10
    id        shift, and go to state 11

    cmds  go to state 61
    cmd   go to state 16


State 61

   23 check: SENAO $@4 ROWEND cmds . FIMSENAO

    FIMSENAO  shift, and go to state 62


State 62

   23 check: SENAO $@4 ROWEND cmds FIMSENAO .

    $default  reduce using rule 23 (check)
